added urecycle and react game

--- a/html/projects.html
+++ b/html/projects.html
@@ -16,7 +16,7 @@
 
 <body>
     <nav class="navbar navbar-dark bg-dark">
-        <a class="navbar-brand" href="#"></a>
+        <a class="navbar-brand" href="#">Joe Pasquale</a>
         <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbar_data"
             aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -84,7 +84,55 @@
                 </div>
             </div>
         </div>
-    </div>
+        <!-- urecycle -->
+        <div class="project-container">
+            <div class="row">
+                <div class="col center">
+                    <h2>URecycle</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col center">
+                    <p>URecycle is written for iOS and Android, using the React Native framework. It is designed to
+                        incentivize users to recycle while on UMass Amherst campus. It rewards
+                        points for scanning barcodes of recyclable items. These points can be redeemed for rewards
+                        pertinent to local businesses. This was done with seven other team members for my COMPSCI 325
+                        Human-Computer Interaction class.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col center">
+                    <a href="https://github.com/TommyOStewart/URecycle" target="_blank"><button
+                            class="linkbox">GitHub</button></a>
+                </div>
+            </div>
+        </div>
+        <!-- reaction game-->
+        <div class="project-container">
+            <div class="row">
+                <div class="col center">
+                    <h2>React!</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col center">
+                    <p>React! is a basic reaction game written in Python. When the player hits start, they will have two
+                        seconds to choose the color which appears on the screen. A correct choice results in +5 points.
+                        An incorrect choice results in a loss. A player wins the game at 25 points. When the player wins
+                        or loses, their score, time, and information are stored on a leaderboard in MSSQL. I wrote this
+                        game for a coding challenge given to me by Tech-Etch Inc. as part of their interview process.
+                    </p>
+                    <p>Note: This program will not run on macOS; It utilizes the tkinter module for the GUI, which is
+                        bugged in current releases of macOS.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col center">
+                    <a href="https://github.com/joepasquale/reaction-game-code-challenge/" target="_blank"><button
+                            class="linkbox">GitHub</button></a>
+                </div>
+            </div>
+        </div>
     </div>
 
     <footer class="page-footer">
