restructured content in misc

--- a/html/misc.html
+++ b/html/misc.html
@@ -16,7 +16,7 @@
 
 <body>
     <nav class="navbar navbar-dark bg-dark">
-        <a class="navbar-brand" href="#"></a>
+        <a class="navbar-brand" href="#">Joe Pasquale</a>
         <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbar_data"
             aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -39,45 +39,61 @@
             </ul>
         </div>
     </nav>
-    <div class="container-lg">
-        <div class="row center">
-            <h1 class="text-center">Miscellaneous</h1>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col center">
+                <h1 class="text-center">Miscellaneous</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col center">
+                <h2>My Equipment</h2>
+            </div>
+        </div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col center project-container">
+                    <h3>Laptop: MacBook Pro 13", 2020</h3>
+                    <img class="misc-img" src="../img/macbookpro.jpg" alt="macbook pro">
+                    <div>
+                        <ul>
+                            <li>Processor: 1.4 GHz Intel i5 8th Generation, 4 cores</li>
+                            <li>Memory: 8 GB 2133 MHz LPDDR3</li>
+                            <li>Graphics: Intel Iris Plus Graphics 645 1536 MB</li>
+                            <li>Storage: 256GB SSD</li>
+                            <li>Display: 2560x1600 Retina Display</li>
+                            <li>OS: macOS Catalina 10.15.5</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col center project-container">
+                    <h3>Desktop: Custom Built</h3>
+                    <img class="misc-img" src="../img/desktop-build.jpg" alt="desktop">
+                    <div>
+                        <ul>
+                            <li>Processor: 3.2 GHz AMD Ryzen 5 1600, 6 cores</li>
+                            <li>Cooling: Wraith Stealth Cooler</li>
+                            <li>Memory: 16 GB Ripjaw Series V 3200 MHz DDR4</li>
+                            <li>Graphics: Zotac GeForce GTX 1060 6GB Mini</li>
+                            <li>Storage:
+                                <ul>
+                                    <li>SSD: ADATA SU655 480GB</li>
+                                    <li>HDD: HP 4TB 64MB Cache 7200RPM SATA III 6.0Gb/s 3.5" Internal Enterprise Hard
+                                        Drive</li>
+                                </ul>
+                            </li>
+                            <li>Motherboard: ASRock A320M</li>
+                            <li>Case: APEVIA White SECC Micro ATX Cube</li>
+                            <li>Display: 1080p AOC 21.5", x2</li>
+                            <li>OS: Windows 10 Education</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-    <div>
-        <p>My Equipment:
-        <ul>
-            <li>Laptop: MacBook Pro 13", 2020
-                <ul>
-                    <li>Processor: 1.4 GHz Intel i5 8th Generation, 4 cores</li>
-                    <li>Memory: 8 GB 2133 MHz LPDDR3</li>
-                    <li>Graphics: Intel Iris Plus Graphics 645 1536 MB</li>
-                    <li>Storage: 256GB SSD</li>
-                    <li>Display: 2560x1600 Retina Display</li>
-                    <li>OS: macOS Catalina 10.15.5</li>
-                </ul>
-            </li>
-            <li>Desktop:
-                <ul>
-                    <li>Processor: 3.2 GHz AMD Ryzen 5 1600, 6 cores</li>
-                    <li>Cooling: Wraith Stealth Cooler</li>
-                    <li>Memory: 16 GB Ripjaw Series V 3200 MHz DDR4</li>
-                    <li>Graphics: Zotac GeForce GTX 1060 6GB Mini</li>
-                    <li>Storage:
-                        <ul>
-                            <li>SSD: ADATA SU655 480GB</li>
-                            <li>HDD: HP 4TB 64MB Cache 7200RPM SATA III 6.0Gb/s 3.5" Internal Enterprise Hard
-                                Drive</li>
-                        </ul>
-                    </li>
-                    <li>Motherboard: ASRock A320M</li>
-                    <li>Case: APEVIA White SECC Micro ATX Cube</li>
-                    <li>Display: 1080p AOC 21.5", x2</li>
-                    <li>OS: Windows 10 Education</li>
-                </ul>
-            </li>
-        </ul>
-        </p>
     </div>
 
     <footer class="page-footer">
