restyled components of pcs

--- a/html/misc.html
+++ b/html/misc.html
@@ -23,20 +23,20 @@
         </button>
 
         <div class="navbar-collapse collapse" id="navbar_data">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./projects.html">Projects</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./resume.html">Resume</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./misc.html">Miscellaneous</a>
-                </li>
-            </ul>
+            <p class="navbar-nav mr-auto">
+                <br class="nav-item active">
+                <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
+
+                <br class="nav-item">
+                <a class="nav-link" href="./projects.html">Projects</a>
+
+                <br class="nav-item">
+                <a class="nav-link" href="./resume.html">Resume</a>
+
+                <br class="nav-item">
+                <a class="nav-link" href="./misc.html">Miscellaneous</a>
+
+            </p>
         </div>
     </nav>
     <div class="container-fluid">
@@ -56,14 +56,14 @@
                     <h3>Laptop: MacBook Pro 13", 2020</h3>
                     <img class="misc-img" src="../img/macbookpro.jpg" alt="macbook pro">
                     <div>
-                        <ul>
-                            <li>Processor: 1.4 GHz Intel i5 8th Generation, 4 cores</li>
-                            <li>Memory: 8 GB 2133 MHz LPDDR3</li>
-                            <li>Graphics: Intel Iris Plus Graphics 645 1536 MB</li>
-                            <li>Storage: 256GB SSD</li>
-                            <li>Display: 2560x1600 Retina Display</li>
-                            <li>OS: macOS Catalina 10.15.5</li>
-                        </ul>
+                        <p>
+                            <br>Processor: 1.4 GHz Intel i5 8th Generation, 4 cores
+                            <br>Memory: 8 GB 2133 MHz LPDDR3
+                            <br>Graphics: Intel Iris Plus Graphics 645 1536 MB
+                            <br>Storage: 256GB SSD
+                            <br>Display: 2560x1600 Retina Display
+                            <br>OS: macOS Catalina 10.15.5
+                        </p>
                     </div>
                 </div>
             </div>
@@ -72,23 +72,20 @@
                     <h3>Desktop: Custom Built</h3>
                     <img class="misc-img" src="../img/desktop-build.jpg" alt="desktop">
                     <div>
-                        <ul>
-                            <li>Processor: 3.2 GHz AMD Ryzen 5 1600, 6 cores</li>
-                            <li>Cooling: Wraith Stealth Cooler</li>
-                            <li>Memory: 16 GB Ripjaw Series V 3200 MHz DDR4</li>
-                            <li>Graphics: Zotac GeForce GTX 1060 6GB Mini</li>
-                            <li>Storage:
-                                <ul>
-                                    <li>SSD: ADATA SU655 480GB</li>
-                                    <li>HDD: HP 4TB 64MB Cache 7200RPM SATA III 6.0Gb/s 3.5" Internal Enterprise Hard
-                                        Drive</li>
-                                </ul>
-                            </li>
-                            <li>Motherboard: ASRock A320M</li>
-                            <li>Case: APEVIA White SECC Micro ATX Cube</li>
-                            <li>Display: 1080p AOC 21.5", x2</li>
-                            <li>OS: Windows 10 Education</li>
-                        </ul>
+                        <p>
+                            <br>Processor: 3.2 GHz AMD Ryzen 5 1600, 6 cores
+                            <br>Cooling: Wraith Stealth Cooler
+                            <br>Memory: 16 GB Ripjaw Series V 3200 MHz DDR4
+                            <br>Graphics: Zotac GeForce GTX 1060 6GB Mini
+                            <br>Storage:
+                            <b>SSD:</b> ADATA SU655 480GB,
+                            <b>HDD:</b> HP 4TB 64MB Cache 7200RPM SATA III 6.0Gb/s 3.5" Internal Enterprise Hard
+                            Drive
+                            <br>Motherboard: ASRock A320M
+                            <br>Case: APEVIA White SECC Micro ATX Cube
+                            <br>Display: 1080p AOC 21.5", x2
+                            <br>OS: Windows 10 Education
+                        </p>
                     </div>
                 </div>
             </div>
