adjusted navbar resume links to go to document

--- a/html/misc.html
+++ b/html/misc.html
@@ -31,7 +31,7 @@
                 <a class="nav-link" href="./projects.html">Projects</a>
 
                 <br class="nav-item">
-                <a class="nav-link" href="./resume.html">Resume</a>
+                <a class="nav-link" href="../docs/resume.pdf" target="_blank">Resume</a>
 
                 <br class="nav-item">
                 <a class="nav-link" href="./misc.html">Miscellaneous</a>
