--- a/html/projects.html
+++ b/html/projects.html
@@ -31,8 +31,7 @@
                     <a class="nav-link" href="./projects.html">Projects</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./resume.html">Resume</a>
-                </li>
+                    <a class="nav-link" href="../docs/resume.pdf" target="_blank">Resume</a> </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./misc.html">Miscellaneous</a>
                 </li>
