--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
                     <a class="nav-link" href="./html/projects.html">Projects</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./html/resume.html">Resume</a>
-                </li>
+                    <a class="nav-link" href="./docs/resume.pdf" target="_blank">Resume</a> </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./html/misc.html">Miscellaneous</a>
                 </li>
