--- a/html/projects.html
+++ b/html/projects.html
@@ -132,6 +132,25 @@
                 </div>
             </div>
         </div>
+        <!-- stable matching applet-->
+        <div class="project-container">
+            <div class="row">
+                <div class="col center">
+                    <h2>Stable Matcher</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col center">
+                    <p>Work in progress</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col center">
+                    <a href="./applets/matcher.html" target="_blank"><button
+                            class="linkbox">Applet</button></a>
+                </div>
+            </div>
+        </div>
     </div>
 
     <footer class="page-footer">
