added basic react applet in place of matcher

--- a/html/applets/matcher.html
+++ b/html/applets/matcher.html
@@ -40,7 +40,10 @@
     </nav>
 
     <!--Applet start-->
-    <div id="like_button_container"></div>
+    <div id="match_container">
+
+    </div>
+    <!--Applet end-->
 
     <footer class="page-footer">
         <div class="footer-copyright">
@@ -50,6 +53,7 @@
         </div>
     </footer>
 
+    <!--Bootstrap Scripts-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
@@ -59,6 +63,15 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
+
+    <!--React Scripts-->
+    <!-- Load React. -->
+    <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
+    <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+
+    <!-- Load our React component. -->
+    <script src="matcher.js"></script>
 
 </body>
 
