moved stable matcher to subfolder under applets
better organized for more applets

--- a/html/projects.html
+++ b/html/projects.html
@@ -146,7 +146,7 @@
             </div>
             <div class="row">
                 <div class="col center">
-                    <a href="./applets/matcher.html" target="_blank"><button
+                    <a href="./applets/matcher/matcher.html" target="_blank"><button
                             class="linkbox">Applet</button></a>
                 </div>
             </div>
