--- a/html/applets/matcher/matcher.html
+++ b/html/applets/matcher/matcher.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../../../style.css">
 
-    <title>Joe Pasquale - Projects</title>
+    <title>Joe Pasquale - Stable Matching Solver</title>
 
 </head>
 
@@ -25,25 +25,45 @@
         <div class="navbar-collapse collapse" id="navbar_data">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="../../index.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="../../../index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../projects.html">Projects</a>
+                    <a class="nav-link" href="../../projects.html">Projects</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../../docs/resume.pdf" target="_blank">Resume</a> </li>
+                    <a class="nav-link" href="../../../docs/resume.pdf" target="_blank">Resume</a> </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../misc.html">Miscellaneous</a>
+                    <a class="nav-link" href="../../misc.html">Miscellaneous</a>
                 </li>
             </ul>
         </div>
     </nav>
 
-    <!--Applet start-->
-    <div id="match_container">
-
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col center">
+                <h1>Stable Matching Solver</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col center">
+                <p>The Stable Matching Solver is an algorithmic solution to the <a
+                        href="https://en.wikipedia.org/wiki/Stable_marriage_problem" target="_blank">Stable
+                        Marriage Problem</a>,
+                    which is the problem of finding a stable matching between two equally sized sets of elements given
+                    an ordering of preferences for each element. Simply add the appropriate members to the preferred
+                    set, and the rest of the members to the regular set. If the sets are equally sized, then the matcher
+                    will return the optimal matching based on the <a
+                        href="https://en.wikipedia.org/wiki/Gale%E2%80%93Shapley_algorithm" target="_blank">Gale-Shapely
+                        Algorithm</a>
+                </p>
+            </div>
+        </div>
+        <!--Applet start-->
+        <div id="match_container" class="center project-container">
+        </div>
+        <!--Applet end-->
     </div>
-    <!--Applet end-->
 
     <footer class="page-footer">
         <div class="footer-copyright">
