--- a/html/misc.html
+++ b/html/misc.html
@@ -26,7 +26,8 @@
             <p class="navbar-nav mr-auto">
                 <br class="nav-item active">
                 <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
-
+                <br class="nav-item">
+                <a class="nav-link" href="./applets/index.html">Applets</a>
                 <br class="nav-item">
                 <a class="nav-link" href="./projects.html">Projects</a>
 
