--- a/html/projects.html
+++ b/html/projects.html
@@ -28,6 +28,9 @@
                     <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="./applets/index.html">Applets</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="./projects.html">Projects</a>
                 </li>
                 <li class="nav-item">
