fixed links and moved matcher files into src for jsx preprocessor

--- a/html/applets/index.html
+++ b/html/applets/index.html
@@ -43,7 +43,7 @@
     </nav>
 
     <div class="container-fluid">
-        <a href="matcher/matcher.html" target="_blank">Matcher</a>
+        <a href="./matcher/src/html/matcher.html" target="_blank">Matcher</a>
     </div>
 
     <footer class="page-footer">
