--- a/html/applets/matcher/src/html/matcher.html
+++ b/html/applets/matcher/src/html/matcher.html
@@ -25,18 +25,18 @@
         <div class="navbar-collapse collapse" id="navbar_data">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="../../../index.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="../../../../../index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../index.html">Applets</a>
+                    <a class="nav-link" href="../../../index.html">Applets</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../../projects.html">Projects</a>
+                    <a class="nav-link" href="../../../../projects.html">Projects</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../../../docs/resume.pdf" target="_blank">Resume</a> </li>
+                    <a class="nav-link" href="../../../../../docs/resume.pdf" target="_blank">Resume</a> </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../../misc.html">Miscellaneous</a>
+                    <a class="nav-link" href="../../../../misc.html">Miscellaneous</a>
                 </li>
             </ul>
         </div>
