--- a/html/applets/index.html
+++ b/html/applets/index.html
@@ -42,7 +42,7 @@
         </div>
     </nav>
 
-    <div class="container-fluid">
+    <div class="container-fluid linkbox">
         <a href="./matcher/src/html/matcher.html" target="_blank">Matcher</a>
     </div>
 
