--- a/html/applets/matcher/src/html/matcher.html
+++ b/html/applets/matcher/src/html/matcher.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="../../../style.css">
+    <link rel="stylesheet" href="../../../../../style.css">
 
     <title>Joe Pasquale - Stable Matching Solver</title>
 
@@ -94,7 +94,7 @@
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
 
     <!-- Load our React component. -->
-    <script src="matcher.js"></script>
+    <script src="../javascript/matcher.js"></script>
 
 </body>
 
