--- a/html/applets/matcher/src/html/matcher.html
+++ b/html/applets/matcher/src/html/matcher.html
@@ -43,23 +43,28 @@
     </nav>
 
     <div class="container-fluid">
-        <div class="row">
-            <div class="col center">
-                <h1>Stable Matching Solver</h1>
+        <div id="info_container">
+            <div class="row">
+                <div class="col center">
+                    <h1>Stable Matching Solver</h1>
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col center">
-                <p>The Stable Matching Solver is an algorithmic solution to the <a
-                        href="https://en.wikipedia.org/wiki/Stable_marriage_problem" target="_blank">Stable
-                        Marriage Problem</a>,
-                    which is the problem of finding a stable matching between two equally sized sets of elements given
-                    an ordering of preferences for each element. Simply add the appropriate members to the preferred
-                    set, and the rest of the members to the regular set. If the sets are equally sized, then the matcher
-                    will return the optimal matching based on the <a
-                        href="https://en.wikipedia.org/wiki/Gale%E2%80%93Shapley_algorithm" target="_blank">Gale-Shapely
-                        Algorithm</a>
-                </p>
+            <div class="row">
+                <div class="col center">
+                    <p>The Stable Matching Solver is an algorithmic solution to the <a
+                            href="https://en.wikipedia.org/wiki/Stable_marriage_problem" target="_blank">Stable
+                            Marriage Problem</a>,
+                        which is the problem of finding a stable matching between two equally sized sets of elements
+                        given
+                        an ordering of preferences for each element. Simply add the appropriate members to the preferred
+                        set, and the rest of the members to the regular set. If the sets are equally sized, then the
+                        matcher
+                        will return the optimal matching based on the <a
+                            href="https://en.wikipedia.org/wiki/Gale%E2%80%93Shapley_algorithm"
+                            target="_blank">Gale-Shapely
+                            Algorithm</a>
+                    </p>
+                </div>
             </div>
         </div>
         <!--Applet start-->
@@ -90,8 +95,8 @@
     <!--React Scripts-->
     <!-- Load React. -->
     <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
-    <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
-    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react@16/umd/react.production.min.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
 
     <!-- Load our React component. -->
     <script src="../javascript/matcher.js"></script>
