added wip message

--- a/html/applets/matcher/src/html/matcher.html
+++ b/html/applets/matcher/src/html/matcher.html
@@ -64,6 +64,7 @@
                             target="_blank">Gale-Shapely
                             Algorithm</a>
                     </p>
+                    <p>Right now, this is a work in progress.</p>
                 </div>
             </div>
         </div>
