--- a/html/applets/index.html
+++ b/html/applets/index.html
@@ -42,8 +42,17 @@
         </div>
     </nav>
 
-    <div class="container-fluid linkbox">
-        <a href="./matcher/src/html/matcher.html" target="_blank">Matcher</a>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col center">
+                <h1>Applets</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col center">
+                <a href="./matcher/src/html/matcher.html" target="_blank"><button class="linkbox">Stable Matcher</button></a>
+            </div>
+        </div>
     </div>
 
     <footer class="page-footer">
