--- a/applets/matcher/src/html/matcher.html
+++ b/applets/matcher/src/html/matcher.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="../../../../../style.css">
+    <link rel="stylesheet" href="../../../../style.css">
 
     <title>Joe Pasquale - Stable Matching Solver</title>
 
@@ -25,18 +25,18 @@
         <div class="navbar-collapse collapse" id="navbar_data">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="../../../../../index.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="../../../../index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../../../index.html">Applets</a>
+                    <a class="nav-link" href="../../../applets.html">Applets</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../../../../projects.html">Projects</a>
+                    <a class="nav-link" href="../../../../html/projects.html">Projects</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../../../../../docs/resume.pdf" target="_blank">Resume</a> </li>
+                    <a class="nav-link" href="../../../../docs/resume.pdf" target="_blank">Resume</a> </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../../../../misc.html">Miscellaneous</a>
+                    <a class="nav-link" href="../../../../html/misc.html">Miscellaneous</a>
                 </li>
             </ul>
         </div>
