--- a/html/misc.html
+++ b/html/misc.html
@@ -27,7 +27,7 @@
                 <br class="nav-item active">
                 <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
                 <br class="nav-item">
-                <a class="nav-link" href="./applets/index.html">Applets</a>
+                <a class="nav-link" href="../applets/applets.html">Applets</a>
                 <br class="nav-item">
                 <a class="nav-link" href="./projects.html">Projects</a>
 
