--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         <div class="navbar-collapse collapse" id="navbar_data">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./html/applets/index.html">Applets</a>
+                    <a class="nav-link" href="./applets/applets.html">Applets</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./html/projects.html">Projects</a>
