--- a/html/projects.html
+++ b/html/projects.html
@@ -28,7 +28,7 @@
                     <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./applets/index.html">Applets</a>
+                    <a class="nav-link" href="../applets/applets.html">Applets</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./projects.html">Projects</a>
