removed some social buttons

--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
                 <div class="col"><a href="https://spoti.fi/2IjMkgo" target="_blank"><button
                             class="linkbox social_link">Spotify</button></a></div>
             </div>
-            <div class="row center">
+<!--            <div class="row center">
                 <div class="col"><a href="https://instagram.com/joepasquale1" target="_blank"><button
                             class="linkbox social_link">Instagram</button></a></div>
                 <div class="col"><a href="https://reddit.com/u/joepasquale" target="_blank"><button
                             class="linkbox social_link">Reddit</button></a></div>
                 <div class="col"><a href="https://twitter.com/josecanyousi" target="_blank"><button
                             class="linkbox social_link">Twitter</button></a></div>
-            </div>
+            </div> -->
         </div>
         <div class="container-fluid textbox">
             <p>I am currently a Senior-Year Computer Science and Economics student at the University of Massachusetts
