added info about query tool

--- a/html/projects.html
+++ b/html/projects.html
@@ -50,6 +50,35 @@
         </div>
     </div>
     <div class="container-fluid">
+        <!-- visual sql tool -->
+        <div class="project-container">
+            <div class="row">
+                <div class="col center">
+                    <h2>MSSQL Server Visual Query Tool</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col center">
+                    <h5>August 2020</h5>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col center">
+                    <p>This webapp allows users to run queries on an MSSQL server. Users can submit queries in two ways:
+                        a visual interface, or by writing the SQL syntax themselves. The results of the query will
+                        display as a table in the browser window. Users can also export query results as a CSV file.</p>
+                    <p>I wrote this application while I was an intern at Tech-Etch Inc.; they were in the midst of
+                        migrating database platforms, and they needed a quicker way for their typical employee to query
+                        the data from their legacy
+                        database, which had mostly been migrated over to a SQL database.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col center">
+                    <a href="" target="_blank"><button class="linkbox">Coming Soon</button></a>
+                </div>
+            </div>
+        </div>
         <!-- shelf -->
         <div class="project-container">
             <div class="row">
@@ -60,6 +89,11 @@
             <div class="row">
                 <div class="col center">
                     <img src="../img/shelf-logo.png" alt="shelf logo">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col center">
+                    <h5>May 2020</h5>
                 </div>
             </div>
             <div class="row">
@@ -86,34 +120,16 @@
                 </div>
             </div>
         </div>
-        <!-- urecycle -->
-        <div class="project-container">
-            <div class="row">
-                <div class="col center">
-                    <h2>URecycle</h2>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col center">
-                    <p>URecycle is written for iOS and Android, using the React Native framework. It is designed to
-                        incentivize users to recycle while on UMass Amherst campus. It rewards
-                        points for scanning barcodes of recyclable items. These points can be redeemed for rewards
-                        pertinent to local businesses. This was done with seven other team members for my COMPSCI 325
-                        Human-Computer Interaction class.</p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col center">
-                    <a href="https://github.com/TommyOStewart/URecycle" target="_blank"><button
-                            class="linkbox">GitHub</button></a>
-                </div>
-            </div>
-        </div>
         <!-- reaction game-->
         <div class="project-container">
             <div class="row">
                 <div class="col center">
                     <h2>React!</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col center">
+                    <h5>March 2020</h5>
                 </div>
             </div>
             <div class="row">
@@ -131,6 +147,34 @@
             <div class="row">
                 <div class="col center">
                     <a href="https://github.com/joepasquale/reaction-game-code-challenge/" target="_blank"><button
+                            class="linkbox">GitHub</button></a>
+                </div>
+            </div>
+        </div>
+        <!-- urecycle -->
+        <div class="project-container">
+            <div class="row">
+                <div class="col center">
+                    <h2>URecycle</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col center">
+                    <h5>December 2019</h5>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col center">
+                    <p>URecycle is written for iOS and Android, using the React Native framework. It is designed to
+                        incentivize users to recycle while on UMass Amherst campus. It rewards
+                        points for scanning barcodes of recyclable items. These points can be redeemed for rewards
+                        pertinent to local businesses. This was done with seven other team members for my COMPSCI 325
+                        Human-Computer Interaction class.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col center">
+                    <a href="https://github.com/TommyOStewart/URecycle" target="_blank"><button
                             class="linkbox">GitHub</button></a>
                 </div>
             </div>
