added langs under projects

--- a/html/projects.html
+++ b/html/projects.html
@@ -60,6 +60,7 @@
             <div class="row">
                 <div class="col center">
                     <h5>August 2020</h5>
+                    <h5>Python</h3>
                 </div>
             </div>
             <div class="row">
@@ -94,6 +95,7 @@
             <div class="row">
                 <div class="col center">
                     <h5>May 2020</h5>
+                    <h5>JavaScript, TypeScript</H5>
                 </div>
             </div>
             <div class="row">
@@ -130,6 +132,7 @@
             <div class="row">
                 <div class="col center">
                     <h5>March 2020</h5>
+                    <h5>Python</h5>
                 </div>
             </div>
             <div class="row">
@@ -161,6 +164,7 @@
             <div class="row">
                 <div class="col center">
                     <h5>December 2019</h5>
+                    <h5>JavaScript</h5>
                 </div>
             </div>
             <div class="row">
