added link to sql query tool

--- a/html/projects.html
+++ b/html/projects.html
@@ -76,7 +76,7 @@
             </div>
             <div class="row">
                 <div class="col center">
-                    <a href="" target="_blank"><button class="linkbox">Coming Soon</button></a>
+                    <a href="https://github.com/joepasquale/sql-query-tool" target="_blank"><button class="linkbox">GitHub</button></a>
                 </div>
             </div>
         </div>
