--- a/applets/applets.html
+++ b/applets/applets.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" href="../style.css">
 
-    <title>Joe Pasquale - Stable Matching Solver</title>
+    <title>Joe Pasquale - Applets</title>
 
 </head>
 
@@ -44,7 +44,8 @@
 
     <div class="container-fluid">
         <div class="row">
-            <div class="col center">
+            <p>Under construction</p>
+            <!--<div class="col center">
                 <h1>Applets</h1>
             </div>
         </div>
@@ -59,7 +60,7 @@
                 <a href="./mmcalculator/src/html/mmcalculator.html"><button class="linkbox">Molar Mass
                         Calculator
                     </button></a>
-            </div>
+            </div>-->
         </div>
     </div>
 
