--- a/html/projects.html
+++ b/html/projects.html
@@ -65,7 +65,11 @@
             </div>
             <div class="row">
                 <div class="col center">
-                    <img src="../img/sql-q-tool-2.png" alt="shelf logo">
+                    <img src="../img/sql-q-tool-2.PNG" alt="sql image">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col center">
                     <p>This webapp allows users to run queries on an MSSQL server. Users can submit queries in two ways:
                         a visual interface, or by writing the SQL syntax themselves. The results of the query will
                         display as a table in the browser window. Users can also export query results as a CSV file.</p>
