--- a/html/projects.html
+++ b/html/projects.html
@@ -64,7 +64,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col center">
+                <div class="col center" style="size:25%">
                     <img src="../img/sql-q-tool-2.PNG" alt="sql image">
                 </div>
             </div>
