still trying to fix image

--- a/html/projects.html
+++ b/html/projects.html
@@ -64,8 +64,8 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col center" style="size:25%">
-                    <img src="../img/sql-q-tool-2.PNG" alt="sql image">
+                <div class="col center">
+                    <img src="../img/sql-q-tool-2.PNG" alt="sql image" style="size:25%">
                 </div>
             </div>
             <div class="row">
