--- a/html/projects.html
+++ b/html/projects.html
@@ -65,129 +65,129 @@
             </div>
             <div class="row">
                 <div class="col center">
-                    <img src="../img/sql-q-tool-2.PNG" alt="sql image" style="width:100%"> </div>
+                    <img src="../img/sql-q-tool-2.PNG" alt="sql image" style="width:100%;">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col center">
+                    <p>This webapp allows users to run queries on an MSSQL server. Users can submit queries in two ways:
+                        a visual interface, or by writing the SQL syntax themselves. The results of the query will
+                        display as a table in the browser window. Users can also export query results as a CSV file.</p>
+                    <p>I wrote this application while I was an intern at Tech-Etch Inc.; they were in the midst of
+                        migrating database platforms, and they needed a quicker way for their typical employee to query
+                        the data from their legacy
+                        database, which had mostly been migrated over to a SQL database.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col center">
+                    <a href="https://github.com/joepasquale/sql-query-tool" target="_blank"><button class="linkbox">GitHub</button></a>
+                </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col center">
-                <p>This webapp allows users to run queries on an MSSQL server. Users can submit queries in two ways:
-                    a visual interface, or by writing the SQL syntax themselves. The results of the query will
-                    display as a table in the browser window. Users can also export query results as a CSV file.</p>
-                <p>I wrote this application while I was an intern at Tech-Etch Inc.; they were in the midst of
-                    migrating database platforms, and they needed a quicker way for their typical employee to query
-                    the data from their legacy
-                    database, which had mostly been migrated over to a SQL database.</p>
+        <!-- shelf -->
+        <div class="project-container">
+            <div class="row">
+                <div class="col center">
+                    <h2>Shelf</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col center">
+                    <img src="../img/shelf-logo.png" alt="shelf logo">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col center">
+                    <h5>May 2020</h5>
+                    <h5>JavaScript, TypeScript</H5>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col center">
+                    <p>Shelf is a website which allows a user to sign up and store books that they are currently
+                        reading,
+                        have read, or plan to read. They can search for books which are fetched from the Google
+                        Books API, which will return basic information about the book, such as title, author, and
+                        publisher, as well as more detailed information, such as cover art and Google Books rating.
+                        Users are able to add reviews and ratings to books. Users can share their "shelves" with
+                        other people when they add them as a friend, and they can comment on activity from members
+                        of their friends list, which show up in a feed. This was done with Daniel Coley and Josh
+                        Vasilevsky, my two other team members in COMPSCI 326 at UMass.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col center">
+                    <a href="https://shelf-book-app.herokuapp.com/" target="_blank"><button class="linkbox">Access via
+                            Heroku</button></a>
+                </div>
+                <div class="col center">
+                    <a href="https://github.com/joepasquale/326-final-sigma/" target="_blank"><button
+                            class="linkbox">GitHub</button></a>
+                </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col center">
-                <a href="https://github.com/joepasquale/sql-query-tool" target="_blank"><button
-                        class="linkbox">GitHub</button></a>
+        <!-- reaction game-->
+        <div class="project-container">
+            <div class="row">
+                <div class="col center">
+                    <h2>React!</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col center">
+                    <h5>March 2020</h5>
+                    <h5>Python</h5>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col center">
+                    <p>React! is a basic reaction game written in Python. When the player hits start, they will have two
+                        seconds to choose the color which appears on the screen. A correct choice results in +5 points.
+                        An incorrect choice results in a loss. A player wins the game at 25 points. When the player wins
+                        or loses, their score, time, and information are stored on a leaderboard in MSSQL. I wrote this
+                        game for a coding challenge given to me by Tech-Etch Inc. as part of their interview process.
+                    </p>
+                    <p>Note: This program will not run on macOS; It utilizes the tkinter module for the GUI, which is
+                        bugged in current releases of macOS.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col center">
+                    <a href="https://github.com/joepasquale/reaction-game-code-challenge/" target="_blank"><button
+                            class="linkbox">GitHub</button></a>
+                </div>
             </div>
         </div>
-    </div>
-    <!-- shelf -->
-    <div class="project-container">
-        <div class="row">
-            <div class="col center">
-                <h2>Shelf</h2>
+        <!-- urecycle -->
+        <div class="project-container">
+            <div class="row">
+                <div class="col center">
+                    <h2>URecycle</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col center">
+                    <h5>December 2019</h5>
+                    <h5>JavaScript</h5>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col center">
+                    <p>URecycle is written for iOS and Android, using the React Native framework. It is designed to
+                        incentivize users to recycle while on UMass Amherst campus. It rewards
+                        points for scanning barcodes of recyclable items. These points can be redeemed for rewards
+                        pertinent to local businesses. This was done with seven other team members for my COMPSCI 325
+                        Human-Computer Interaction class.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col center">
+                    <a href="https://github.com/TommyOStewart/URecycle" target="_blank"><button
+                            class="linkbox">GitHub</button></a>
+                </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col center">
-                <img src="../img/shelf-logo.png" alt="shelf logo">
-            </div>
-        </div>
-        <div class="row">
-            <div class="col center">
-                <h5>May 2020</h5>
-                <h5>JavaScript, TypeScript</H5>
-        </div>
-        <div class="row">
-            <div class="col center">
-                <p>Shelf is a website which allows a user to sign up and store books that they are currently
-                    reading,
-                    have read, or plan to read. They can search for books which are fetched from the Google
-                    Books API, which will return basic information about the book, such as title, author, and
-                    publisher, as well as more detailed information, such as cover art and Google Books rating.
-                    Users are able to add reviews and ratings to books. Users can share their "shelves" with
-                    other people when they add them as a friend, and they can comment on activity from members
-                    of their friends list, which show up in a feed. This was done with Daniel Coley and Josh
-                    Vasilevsky, my two other team members in COMPSCI 326 at UMass.</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col center">
-                <a href="https://shelf-book-app.herokuapp.com/" target="_blank"><button class="linkbox">Access via
-                        Heroku</button></a>
-            </div>
-            <div class="col center">
-                <a href="https://github.com/joepasquale/326-final-sigma/" target="_blank"><button
-                        class="linkbox">GitHub</button></a>
-            </div>
-        </div>
-    </div>
-    <!-- reaction game-->
-    <div class="project-container">
-        <div class="row">
-            <div class="col center">
-                <h2>React!</h2>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col center">
-                <h5>March 2020</h5>
-                <h5>Python</h5>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col center">
-                <p>React! is a basic reaction game written in Python. When the player hits start, they will have two
-                    seconds to choose the color which appears on the screen. A correct choice results in +5 points.
-                    An incorrect choice results in a loss. A player wins the game at 25 points. When the player wins
-                    or loses, their score, time, and information are stored on a leaderboard in MSSQL. I wrote this
-                    game for a coding challenge given to me by Tech-Etch Inc. as part of their interview process.
-                </p>
-                <p>Note: This program will not run on macOS; It utilizes the tkinter module for the GUI, which is
-                    bugged in current releases of macOS.</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col center">
-                <a href="https://github.com/joepasquale/reaction-game-code-challenge/" target="_blank"><button
-                        class="linkbox">GitHub</button></a>
-            </div>
-        </div>
-    </div>
-    <!-- urecycle -->
-    <div class="project-container">
-        <div class="row">
-            <div class="col center">
-                <h2>URecycle</h2>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col center">
-                <h5>December 2019</h5>
-                <h5>JavaScript</h5>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col center">
-                <p>URecycle is written for iOS and Android, using the React Native framework. It is designed to
-                    incentivize users to recycle while on UMass Amherst campus. It rewards
-                    points for scanning barcodes of recyclable items. These points can be redeemed for rewards
-                    pertinent to local businesses. This was done with seven other team members for my COMPSCI 325
-                    Human-Computer Interaction class.</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col center">
-                <a href="https://github.com/TommyOStewart/URecycle" target="_blank"><button
-                        class="linkbox">GitHub</button></a>
-            </div>
-        </div>
-    </div>
     </div>
 
     <footer class="page-footer">
